5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1716_2507.log
== TEST (2019-05-15 18:34:00) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade += acrescimo
	quantidade -= quantidade_retirada
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade += acrescimo
NameError: name 'acrescimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:06) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade += input('quantidae')
	quantidade -= input(quantidade_retirada)
	anos +=1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade += input()
TypeError: unsupported operand type(s) for +=: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:06) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade += input('quantidade')
	quantidade -= input('quantidade_retirada')
	anos +=1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade += input()
TypeError: unsupported operand type(s) for +=: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:35) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade += input('quantidade:')
	quantidade -= input('quantidade_retirada:')
	anos +=1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade += input()
TypeError: unsupported operand type(s) for +=: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:38:38) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	anos +=1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    anos +=1
NameError: name 'anos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:05) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    meses += 1
NameError: name 'meses' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:48) 
-- CODE:
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses -= 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    meses -= 1
NameError: name 'meses' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:43:06) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 < quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(0 < quantidade < 8000):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:44:31) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(0 <quantidade < 8000):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:11) 
-- CODE:
meses = 0
quantidade = float(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrscimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(0 <quantidade < 8000):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:07) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(0 <quantidade < 8000):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:24:33) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrescimo = quantidade * percent/100
	quantidade = int(input('quantidade:'))
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:25:06) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrescimo = quantidade * percent/100
	quantidade = int(input('quantidade:'))
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:26:41) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while(0 <quantidade < 8000):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(0 <quantidade < 8000):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:27:52) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while (quantidade < 0 < quantidade):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:28:41) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while (0 > quantidade < 0):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:29:01) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while (0 < quantidade < 0):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:29:33) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
quantidade_retirada = int(input('quantidade retirada para venda: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade:')
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (0 < quantidade < 8000 ):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:41:14) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = input('quantidade_retirada:')
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (0 < quantidade < 8000 ):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:41:49) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:42:26) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:43:28) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:44:53) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quantidade = quantidade - acrescimo
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:45:34) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quantidade = quantidade_retirada - acrescimo
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = quantidade_retirada - acrescimo
NameError: name 'quantidade_retirada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:46:39) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quantidade = quantidade - acrescimo
	quantidade = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 1):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:56:51) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quantidade = quantidade - quan
	quan = int(input('quantidade_retirada:'))
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade = quantidade - quan
NameError: name 'quan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:37) 
-- CODE:
meses = 1
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quan = int(input('quantidade_retirada:'))
	quantidade = quantidade - quan
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- OUTPUT:
MAXIMO
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:57:59) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quan = int(input('quantidade_retirada:'))
	quantidade = quantidade - quan
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:58:20) 
-- CODE:
meses = 0
quantidade = int(input('quantidade inicial de pirarucus: '))
percent = int(input('percentual de crescimento no tanque: '))
while (0 < quantidade < 8000 ):
	acrescimo = quantidade * percent/100
	quantidade = quantidade + acrescimo
	quan = int(input('quantidade_retirada:'))
	quantidade = quantidade - quan
	meses += 1
if(quantidade <= 0):
	print ('ZERO')
else:
	print('MAXIMO')
print(meses)
-- EXECUTION TIME:
0.191223
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
